# coffeeshelf

./: .gitignore  .vercelignore  README.md  requirements.txt  vercel.json
api/: index.py
backend/: pyproject.toml
backend/app/: crud_routes.py  db.py  main.py  models.py  schemas.py  seed.py  suggest_routes.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: BeanCard.jsx  BeanDetail.jsx  BeanForm.jsx  Filters.jsx  Stars.jsx  Suggester.jsx  Zine.jsx
