[project]
name = "coffee-zine-backend"
version = "0.1.0"
description = "The Daily Grind — coffee bean zine backend (FastAPI + SQLite)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "httpx>=0.27",
]

# This is an application, not an installable package — don't try to build/install it.
[tool.uv]
package = false
